Changes: - Changed course information name to match other controllers - updated shortcuts description in progress page - updated the layout of the course information page for teacher and student - changed name of "hide" button in in-class when clicked on to "show" - updated progress page inclass survey count to count the survey itself - fixed issuew with mobile layout where menu didn't open - adjusted some layout issues with course editor home page - adjusted some layout issues with inclass page - adjusted some layout issues with progress page

--- a/app/styles/main-foundation.css
+++ b/app/styles/main-foundation.css
@@ -1127,10 +1127,10 @@ td.right-border{
   z-index: 11 !important;
  
 }
-.main-nav .top-bar, .main-nav .top-bar .name {
-   height: 2rem !important;
+/*.main-nav .top-bar, .main-nav .top-bar .name {
+   height: 2rem;
   line-height:2rem;
-}
+}*/
 
 .main-nav .top-bar .name h1, .top-bar .name h2, .top-bar .name h3, .top-bar .name h4, .top-bar .name p, .top-bar .name span{
   line-height: 2rem
@@ -2056,6 +2056,13 @@ a.editable-click{
   }
 }
 
+@media only screen and (min-width:40.063em){
+  .main-nav .top-bar, .main-nav .top-bar .name {
+    height: 2rem !important;
+    line-height:2rem;
+  }
+}
+
 @media only screen and (min-width:64.063em) {
   .large-height-big{
     height: 82vh !important;
@@ -2063,9 +2070,7 @@ a.editable-click{
   .with-huge-padding-side{
     padding-left: 10.5rem !important;
     padding-right: 10.5rem !important;
-  }
-
-  
+  }  
 }
 
 @media only screen and (min-width:84.063em) {
@@ -2087,6 +2092,7 @@ a.editable-click{
   .hide-for-semi-medium{
     display: none !important;
   }
+
 }
 
 @media only screen and (max-width:15.063em){
